<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="title" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="ic_share">Поделиться</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>
    <string name="site">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="chooser_title">Выберите приложение:</string>
    <string name="mail">kotzimaru@yandex.ru</string>
    <string name="search_error">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="storySearch">Вы искали</string>
    <string name="internet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="duration">Длительность</string>
    <string name="clear">очистить запрос</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="excerpt_duration">5:31</string>
    <string name="toast">Вы еще не включали музыку, воспользуйтесь командой Поиск</string>
    <string name="warning">Для данного трека недоступно предпрослушивание</string>
    <string name="mediateka">Медиатека</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="cover">cover</string>
    <string name="add_button">add_button</string>
    <string name="play_button">play_button</string>
    <string name="like_button">like_button</string>
    <string name="ic_support">ic_support</string>
    <string name="ic_arrow_forward">ic_arrow_forward</string>
    <string name="playing_error">Нет интернета, не удалось загрузить трек</string>
    <string name="still_loading">Трек еще загружается...</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="playlist_name">Название*</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="emptyPlayLists">Вы не создали ни одного плейлиста</string>
    <string name="Media">Медиатека</string>
    <string name="FavoriteTracks">Избранные треки</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="playlist_description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="my_playlists">my_playlists</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="added">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="ic_more">ic_more</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="nothing_added">Вы еще не добавили ни одного трека</string>
    <string name="empty_track_list">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_Information">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="changed">изменен</string>

    <plurals name="tracks">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>