<!-- 1. Главная -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/size_dp_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/text_size_22"
        android:padding="@dimen/size_dp_15"
        android:gravity="top"
        />


    <Button
        style="@style/ButtonStyle"
        android:id="@+id/search_button"
        android:text="@string/search"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/media_button"
        android:text="@string/media"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_media"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/radius"
        />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/settings_button"
        android:text="@string/setting"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_settings"
        app:iconTint="@color/black"
        android:layout_marginBottom="@dimen/size_dp_15"
        app:cornerRadius="@dimen/radius"
        />
</LinearLayout>