<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/settings"
    android:orientation="vertical">


    <LinearLayout
        style="@style/settings"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/arrow_back"
            style="@style/image_arrow_back"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back">
        </ImageView>

        <TextView
            style="@style/setting_text"
            android:text="@string/setting">

        </TextView>

    </LinearLayout>

    <FrameLayout
        style="@style/settings"

        >

        <TextView
            style="@style/setting_menu"
            android:text="@string/dark_theme"

            >

        </TextView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:buttonTint="#DD1515"
            android:checked="false"
            android:paddingRight="@dimen/margin_8"
            android:visibility="visible" />


    </FrameLayout>

    <FrameLayout
        style="@style/settings"
        >

        <TextView

            style="@style/setting_menu"
            android:layout_width="wrap_content"
            android:text="@string/share">

        </TextView>

        <ImageView
            android:id="@+id/share"
            style="@style/image"
            android:layout_margin="16dp"
            android:src="@drawable/ic_share">

        </ImageView>

    </FrameLayout>

    <FrameLayout
        style="@style/settings">

        <TextView

            style="@style/setting_menu"
            android:text="@string/support">

        </TextView>

        <ImageView
            android:id="@+id/support"
            style="@style/image"
            android:layout_margin="14dp"
            android:src="@drawable/ic_support">
        </ImageView>


    </FrameLayout>

    <FrameLayout
        style="@style/settings">

        <TextView

            style="@style/setting_menu"
            android:text="@string/agreement"
            >

        </TextView>

        <ImageView
            android:id="@+id/offer"
            style="@style/image"
            android:layout_margin="16dp"
            android:src="@drawable/ic_arrow_forward">

        </ImageView>


    </FrameLayout>


</LinearLayout>
