<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/general_background_color"
    tools:context=".playlist_creator.ui.fragment.PlaylistCreatorFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/YSMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            android:textColor="?attr/toolbar_text_color" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivPlaylistCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_26"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_32"
        android:contentDescription="@string/cover"
        android:src="@drawable/placeholder_cover"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="р, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbNavigation" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_container"
        style="@style/PlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/playlist_name"
        app:layout_constraintTop_toBottomOf="@id/ivPlaylistCover"
        app:layout_constraintBottom_toTopOf="@id/playlist_description_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_container"
        style="@style/PlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistDescription"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        style="@style/MaterialButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_50"
        android:layout_marginStart="@dimen/margin_17"
        android:layout_marginEnd="@dimen/margin_17"
        android:layout_marginBottom="@dimen/margin_32"
        android:backgroundTint="@color/new_playlist_button_color"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>