<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/general_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginStart="@dimen/margin_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/setting"
            android:textColor="?attr/toolbar_text_color"
            android:textSize="@dimen/text_size_22">

        </TextView>
    </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"

            >

            <TextView
                style="@style/YSRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="11dp"
                android:buttonTint="#DD1515"
                android:checked="false"
                android:visibility="visible"
                app:useMaterialThemeColors="false" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start">

            <TextView
                style="@style/YSRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/share" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_marginBottom="19dp">

                <ImageView
                    android:id="@+id/share"
                    android:layout_marginVertical="3dp"
                    android:layout_marginHorizontal="@dimen/margin_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    app:tint="?attr/general_icon_color">

                </ImageView>

            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/YSRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/support" />

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_marginBottom="19dp">

                <ImageView
                    android:id="@+id/support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_support"
                    app:tint="?attr/general_icon_color"/>

            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/YSRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/agreement" />

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_marginBottom="19dp">


                <ImageView
                    android:id="@+id/offer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="?attr/general_icon_color"/>


            </FrameLayout>

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
