<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/statusBarColor"
    tools:context=".player.ui.PlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/arrow_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/margin_4"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/margin_12">

            <ImageView
                style="@style/image_arrow_back"
                android:layout_margin="@dimen/margin_4"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back" />
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.976" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toBottomOf="@id/image_bottom_guideline"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"

        />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/blackWhiteColor"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_22"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/image_bottom_guideline"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_14"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/add_button"
        style="@style/add_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/button_add_playlist"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/play_button" />


    <ImageButton
        android:id="@+id/play_button"
        style="@style/image_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button_play"
        app:circularflow_viewCenter="@id/add_button"
        app:layout_constraintBottom_toBottomOf="@id/excerpt_duration"
        app:layout_constraintEnd_toStartOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintTop_toTopOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/like_button"
        style="@style/add_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/button_like"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/excerpt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excerpt_duration"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_14"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constraintBottom_toBottomOf="@id/text_top_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <TextView
        android:id="@+id/duration"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_top_guideline"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/changeable_duration"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/changeable_album"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/changeable_album"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintTop_toTopOf="@id/album"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/changeable_year"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/changeable_genre"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genre"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/text_bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/changeable_country"
        style="@style/playlist4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/blackWhiteColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/country"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>
